--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Website Pertama Saya</title>
+</head>
+<body>
+  <h1>Hello World!</h1>
+  <p>Ini website percuma pertama saya.</p>
+</body>
+</html>
 
